stop gettting exceptions from profiler codebase.